--- a/Pandas_sales_analysis.ipynb
+++ b/Pandas_sales_analysis.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(r'E:\\Python Projects\\Sales_Analysis\\Sales-Analysis-master\\superstore_sales.xlsx')"
+    "df = pd.read_excel(r'Sales-Analysis-master\\superstore_sales.xlsx')"
    ]
   },
   {
